# rust-intersection-painting

./: .gitignore
grid_generators/: Cargo.toml
grid_generators/src/: main.rs
rust-intersection-painting/: .gitignore  Cargo.toml
rust-intersection-painting/src/: TODO.txt  args.rs  generators.rs  gpu.rs  main.rs  stenciler.rs
rust-intersection-painting/src/old_stuff/: state.rs
rust-intersection-painting/src/shaders/: display-shaders.wgsl
wgpu-intersection-painting/: .gitignore  Cargo.toml
wgpu-intersection-painting/src/: args.rs  generators.rs  image_tools.rs  main.rs  state.rs  stenciler.rs
wgpu-intersection-painting/src/old_stuff/: main.rs
wgpu-intersection-painting/src/shaders/: display-shaders.wgsl  intersection-compute.wgsl
