[package]
name = "wgpu-intersection-painting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13.1"
pollster = "0.2"
futures-intrusive = "0.4.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
bytemuck = { version = "1.8.0", features = [ "derive" ] }
itertools = "0.10.5"
clap = { version = "4.1.11", features = ["derive"] }
